--- a/webpack/package.json
+++ b/webpack/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev2": "webpack-dev-server --open --port 3000 --contentBase src --hot",
+    "dev": "webpack-dev-server "
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,13 @@
     "jquery": "^3.5.1"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12"
-  }
+    "css-loader": "^0.20.0",
+    "html-webpack-plugin": "^2.24.1",
+    "less": "^2.3.1",
+    "less-loader": "^2.1.0",
+    "style-loader": "^0.10.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.1"
+  },
+  "private": true
 }
