使用babel处理高级ES语法(版本问题下次没有成功)

--- a/webpack/package.json
+++ b/webpack/package.json
@@ -12,11 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^3.3.7",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.20.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^2.24.1",
